<resources>
    <string name="app_name">aroma</string>

    <string name="mint_varities">Mint Varities</string>
    <string name="app_title">ADD APP TITLE HERE</string>
    <string name="app_sub_title">ADD APPLICATION SUB TITLE HERE</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter Password</string>


    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="forgot_password_2">Forgot Password </string>
    <string name="signup">Sign up</string>

    <string name="name">Name</string>
    <string name="enter_name">Enter name</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="alreday">Already have an account? Login</string>
    <string name="submit">Submit</string>

    <string name="changelaguage">Change Language</string>

    <string name="choose_laguage">Choose Language</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>


    <!--    MENU-->
    <string name="logout">Log out</string>
    <string name="privicy_policy">Privacy Policy</string>
    <string name="farmer_registration">Farmer Registration</string>
    <string name="about">About</string>
    <string name="enter_anything_to_search">Enter anything to search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--    FORM-->


    <string name="rural_dev">Rural Development</string>
    <string name="name_">Name: </string>
    <string name="f_name">Fathers Name: </string>
    <string name="phone">Phone: </string>
    <string name="email_">Email: </string>
    <string name="aadhar">Aadhar/Voter ID Number: </string>
    <string name="gender">Gender: </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dob"> Date of Birth</string>
    <string name="years">Years:</string>
    <string name="caste">Caste:</string>
    <string name="general">General</string>
    <string name="obc">OBC</string>
    <string name="schedule_caste">ST</string>
    <string name="other">Other</string>
    <string name="marital_status">Marital Status:</string>
    <string name="married">Married</string>
    <string name="unmarried">Unmarried</string>
    <string name="family_count">No. of family members :</string>
    <string name="c_address">Present Address :</string>
    <string name="village_town">Town/Village:</string>
    <string name="post">Post:</string>
    <string name="distt">District:</string>
    <string name="state">State:</string>
    <string name="electricity_avl">Electricity Available: </string>
    <string name="yes">Yes</string>
    <string name="no">NO</string>
    <string name="farm_machinery">Farm machinery :</string>
    <string name="tractor">Tractor</string>
    <string name="harvester">Harvester</string>
    <string name="rotavator">Rotavator</string>
    <string name="tubewell">Tubewell</string>
    <string name="none">None</string>
    <string name="t_land_area">Total Land Area (Hectare):</string>
    <string name="t_annual_income">Available Land Area for Aromatic Crops:</string>
    <string name="annual_income_a_c">Annual Income (Aromatic Crops):</string>
    <string name="field_cond">Field Condition :</string>
    <string name="irrigated">Irrigated</string>
    <string name="n_irr">Non irrigated/ Rainfed</string>
    <string name="wasteland">WasteLand</string>
    <string name="drought_aff">Drought Affected</string>
    <string name="waterlogged">WaterLogged</string>
    <string name="irr_facility">Irrigation Facility :</string>
    <string name="pond">Pond</string>
    <string name="canal">Canal</string>
    <string name="well">Well</string>
    <string name="rainfed">Rainfed</string>
    <string name="aroma_mission">Do you want to Cultivate aromatic crops? under "Aroma Mission" If Yes, then mention?</string>
    <string name="lavender">Lavender</string>
    <string name="lemongrass">Lemongrass</string>
    <string name="ocimum">Ocimum</string>
    <string name="rosegrass">Rosagrass</string>
    <string name="rosemary">Rosemary</string>
    <string name="mentha">Mentha</string>
    <string name="salvia_sclarec">Salvia Sclarec</string>
    <string name="garanium">Garanium</string>
    <string name="jammu_monarda">Jammu Monarda</string>
    <string name="aromatic_crops">Are you  Cultivating aromatic crops? If Yes, then mention?</string>
    <string name="h_l_i_map_cul">How long have you been involved in MAPs Cultivation :</string>
    <string name="dur_years">(Duration in Years)</string>
    <string name="cal_max_profit">Aromatic crops Cultivated by farmers that have provided maximum profit:</string>
    <string name="agro_advisory">Do you want  Agro-Advisory services from CSIR-IIIM :</string>
    <string name="beneficiary_csir">Beneficiary of CSIR-IIIM through</string>
    <string name="planting_material">Planting material</string>
    <string name="tranning_prog">tranning Program</string>
    <string name="kissan_mela">IIIM Kisan Mela</string>
    <string name="dist_unit">Distillation Unit</string>
    <string name="herbal_product">Herbal Product</string>
    <string name="advisory_services">Advisory Services</string>
    <string name="field_demostration">Field Demostration</string>
    <string name="sell_oils">Do you want to sell essential oils through CSIR-IIIM?</string>
    <string name="p_m_name_quantity">Planting material (Name and Quantity)</string>
    <string name="requirement">Requirement</string>
    <string name="slips">(Slips)</string>
    <string name="kgs">(Kgs)</string>
    <string name="received">Received</string>
    <string name="acknowledgement">I want to cultivate aromatic plants voluntarily under aroma mission and I will not involve this project of any other istitution.</string>
    <string name="undertaking">Undertaking: I hereby abide that condition that 1/4th  area of my crop raised from my planting materials provided by CSIR-IIIM would be given back to the institution in the following years for distribution amongst other farmars.</string>
    <string name="reg_submit_form">SUBMIT</string>

    //  hint Strings
    <string name="hintName">Enter Your Name </string>
    <string name="hintFName">Enter your fathers name </string>
    <string name="hintPhone">enter Phone</string>
    <string name="hintEmail">Enter your email </string>
    <string name="hintAadhar">Enter AADHAR number </string>
    <string name="hintDOB">dd/mm/yyyy </string>
    <string name="hintAddress">Enter Your Address</string>


    <string-array name="Category">
        <item>--Category--</item>
        <item>General</item>
        <item>OBC</item>
        <item>ST</item>
        <item>SC</item>
    </string-array>
    <string-array name="Education">
        <item>--Education--</item>
        <item>Illiterate</item>
        <item>Primary</item>
        <item>High School</item>
        <item>Graduation</item>
        <item> Post Graduation</item>
    </string-array>
    <string-array name="Occupation">
        <item>--Occupation--</item>
        <item>Agriculture</item>
        <item>Service</item>
        <item>Business</item>
        <item>Other</item>
    </string-array>
    <string-array name="india_states">
        <item>--Select  Your State--</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>

</resources>