<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Register"
    android:background="@drawable/bg_login"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginBottom="100dp"
        android:padding="10dp"
        >
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/logo"
                android:layout_gravity="center_horizontal"
                ></ImageView>

<!--        NAME-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp"
            android:textColor="@color/black"
           android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_light" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:textColor="@color/black"
            android:textColorHint="@color/hintColor"
            android:textSize="16sp"
            android:theme="@style/MyEditTextTheme"></EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="18sp"
            android:textColor="@color/black"

            android:fontFamily="@font/poppins_light" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone_number"
            android:textColor="@color/black"
            android:theme="@style/MyEditTextTheme"
            android:textColorHint="@color/hintColor"
            android:textSize="16sp"
            ></EditText>




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18sp"
            android:textColor="@color/black"

            android:fontFamily="@font/poppins_light" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:textColor="@color/black"
            android:theme="@style/MyEditTextTheme"
            android:textColorHint="@color/hintColor"
            android:textSize="16sp"
            >


        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_light" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:theme="@style/MyEditTextTheme"
            android:textColorHint="@color/hintColor">


        </EditText>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:layout_marginTop="20dp"
            android:textSize="17sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_button"
            android:textColor="@color/white"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/alreday"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black"
                />
        </LinearLayout>






    </LinearLayout>


</LinearLayout>