<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Login"
    android:background="@drawable/bg_login"
    android:orientation="vertical"
    >
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_marginTop="90dp"
          >
          <ImageView
              android:layout_width="100dp"
              android:layout_height="100dp"
              android:background="@drawable/logo"
               android:layout_gravity="center_horizontal"
              ></ImageView>




      </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginBottom="100dp"
        android:padding="10dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_light" />

          <EditText
              android:id="@+id/email"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/enter_email"
              android:padding="15dp"
              android:background="@drawable/edit_text_bg"
              android:textColor="@color/black"
              android:theme="@style/MyEditTextTheme"
              android:textColorHint="@color/hintColor"
              android:textSize="16sp"
              >


          </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_light" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:hint="@string/enter_password"
            android:padding="15dp"
            android:background="@drawable/edit_text_bg"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:theme="@style/MyEditTextTheme"
            android:textColorHint="@color/hintColor"

            >


        </EditText>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="20dp"
            android:textSize="17sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_button"
            android:textColor="@color/white"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:id="@+id/forgotpassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/forgot_password"
                android:layout_weight="1"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/signup"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="@color/black"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/change_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changelaguage"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"

            />





    </LinearLayout>


</LinearLayout>