<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ForgotPassword"
    android:background="@drawable/bg_login"
    >
    <ImageView
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:src="@drawable/icon_back_black"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="4dp"
        ></ImageView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginBottom="100dp"
        android:padding="10dp"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/logo"
            android:layout_gravity="center_horizontal"
            ></ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_2"
            android:gravity="center_horizontal"
            android:textSize="23sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_light" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="40dp"

            android:fontFamily="@font/poppins_light" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:textColor="@color/black"
            android:theme="@style/MyEditTextTheme"
            android:textColorHint="@color/hintColor"
            android:textSize="16sp"
            >


        </EditText>



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginTop="20dp"

            android:textSize="17sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_button"
            android:textColor="@color/white"

            />







    </LinearLayout>

</FrameLayout>